--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "react-select-async-paginate": "^0.6.1"
+    "react-select-async-paginate": "^0.6.1",
+    "yarn": "^1.22.21"
   },
   "scripts": {
     "start": "react-scripts start",
